# Portfolio

./: .gitignore  README.md
apps/api/: Dockerfile  compose.yaml  main.py  models.py  pyproject.toml  tables.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Map.tsx  MapWrapper.tsx  Oneko.tsx  Sidebar.tsx  TypeWriter.tsx
