[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
